fix: css-add text-overflow

--- a/13/table.css
+++ b/13/table.css
@@ -8,7 +8,10 @@ table td {
   height: 40px;
   border: 1px solid green;
   width: 196px;
+  max-width: 196px;
+  overflow: hidden;
   text-overflow: ellipsis;
+  white-space: nowrap;
   text-align: left;
   vertical-align: middle;
   padding: 0 5px;
@@ -19,7 +22,6 @@ table td {
 }
 
 input{
-  text-overflow: ellipsis;
   width: 190px;
   font-family: 'Times New Roman', Times, serif;
   font-size: 16px;
